ajustes e add de organizações

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -83,7 +83,9 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -60%);
+  -webkit-transform: translate(-50%, -60%);
+      -ms-transform: translate(-50%, -60%);
+          transform: translate(-50%, -60%);
 }
 
 .big-icon .material-icons {
